# libfilesync

./: CMakeLists.txt  README.md
libfilesync/: CMakeLists.txt  FileSync.cpp  FileSync.hpp  FileSync.test.cpp  FileSync.test.hpp  FileSyncException.cpp  FileSyncException.hpp  FileSyncException.test.cpp  FileSyncException.test.hpp  FileSyncLocks.cpp  FileSyncLocks.hpp
libfilesync/config/: CMakeLists.txt  config.h.in
libfilesync/core/: BufferedSyncer.cpp  BufferedSyncer.hpp  CMakeLists.txt  FileSyncer.cpp  FileSyncer.hpp  LocalFirstFileSyncer.cpp  LocalFirstFileSyncer.hpp  OneWaySyncer.cpp  OneWaySyncer.hpp  RemoteFirstFileSyncer.cpp  RemoteFirstFileSyncer.hpp  UnbufferedSyncer.cpp  UnbufferedSyncer.hpp
libfilesync/core/conflict/: CMakeLists.txt  InteractiveResolver.cpp  InteractiveResolver.hpp  LocalFirstResolver.cpp  LocalFirstResolver.hpp  RemoteFirstResolver.cpp  RemoteFirstResolver.hpp  Resolver.cpp  Resolver.hpp
libfilesync/core/doc/: buffered_file_syncer_activity.puml  buffered_file_syncer_seq.puml  one_way_file_syncer_activity.puml  unbuffered_file_syncer_activity.puml
libfilesync/core/sync_data/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Directory.cpp  Directory.hpp  Directory.test.cpp  Directory.test.hpp  Entry.cpp  Entry.hpp  Entry.test.cpp  Entry.test.hpp  EntryFactory.cpp  EntryFactory.hpp  File.cpp  File.hpp  FileBuffer.cpp  FileBuffer.hpp  RemoteEntry.cpp  RemoteEntry.hpp  RemoteEntry.test.cpp  RemoteEntry.test.hpp
libfilesync/core/sync_data/buffer/: Buffer.hpp  CMakeLists.txt  CharArrayMemoryBuffer.cpp  CharArrayMemoryBuffer.hpp  FileBuffer.cpp  FileBuffer.hpp  MemoryBuffer.cpp  MemoryBuffer.hpp  ProtocolMemoryBuffer.cpp  ProtocolMemoryBuffer.hpp  ProtocolMemoryBuffer.test.cpp  ProtocolMemoryBuffer.test.hpp
libfilesync/curl/: Base.cpp  Base.hpp  CMakeLists.txt  Exception.cpp  Exception.hpp  FtpClient.cpp  FtpClient.hpp  ProtocolClient.cpp  ProtocolClient.hpp  ProtocolClient.test.cpp  ProtocolClient.test.hpp  SList.cpp  SList.hpp  Setup.cpp  Setup.hpp  Url.cpp  Url.hpp  Url.tpp
libfilesync/curl/config/: config.h
libfilesync/curl/doc/: class.puml
libfilesync/curl/interface/: CMakeLists.txt  Easy.cpp  Easy.hpp  Easy.tpp  EasyStub.test.cpp  EasyStub.test.hpp
libfilesync/curl/option/: CMakeLists.txt  Collection.cpp  Collection.hpp  Factory.cpp  Factory.hpp  Factory.tpp  Generic.hpp  Generic.tpp  Invoker.cpp  Invoker.hpp  Nobody.cpp  Nobody.hpp  Option.cpp  Option.hpp  Quote.cpp  Quote.hpp  ResettableOption.hpp  ResettableOption.tpp  UndoableOption.cpp  UndoableOption.hpp  UndoableOptionImpl.hpp  UndoableOptionImpl.tpp  Upload.cpp  Upload.hpp  Url.cpp  Url.hpp  Verbose.cpp  Verbose.hpp
libfilesync/curl/option/doc/: class.puml  (+1 more)
libfilesync/curl/parser/: CMakeLists.txt  FtpNobody.cpp  FtpNobody.hpp  Nobody.cpp  Nobody.hpp  NobodyStub.test.cpp  NobodyStub.test.hpp
libfilesync/curl/storage/: CMakeLists.txt  CharBuffer.cpp  CharBuffer.hpp  CharBuffer.test.cpp  CharBuffer.test.hpp  ConsumingAllocator.hpp  ConsumingAllocator.tpp  FileStorage.cpp  FileStorage.hpp  FileStorage.test.cpp  FileStorage.test.hpp  MemoryStorage.cpp  MemoryStorage.hpp  MemoryStorage.test.cpp  MemoryStorage.test.hpp  MemoryStorageHandle.cpp  MemoryStorageHandle.hpp  MemoryStorageHandle.test.cpp  MemoryStorageHandle.test.hpp  Storage.cpp  Storage.hpp
libfilesync/curl/utility/: debug.hpp
libfilesync/curl/wrapper/: Base.cpp  Base.hpp  CMakeLists.txt  Easy.cpp  Easy.hpp  Easy.tpp  EasyStub.test.cpp  EasyStub.test.hpp  GlobalSetup.cpp  GlobalSetup.hpp  SList.cpp  SList.hpp  Url.cpp  Url.hpp  Url.tpp
libfilesync/data/: CMakeLists.txt  Data.cpp  Data.hpp  DataException.cpp  DataException.hpp  Directory.cpp  Directory.hpp  Directory.test.cpp  Directory.test.hpp  Directory.tpp  Entry.cpp  Entry.hpp  Entry.tpp  EntryFactory.cpp  EntryFactory.hpp  EntryFactory.tpp  Exception.cpp  Exception.hpp  File.cpp  File.hpp  File.tpp  RemoteEntry.cpp  RemoteEntry.hpp
libfilesync/data/doc/: class.puml
libfilesync/observer/: Observer.hpp  Subject.hpp
libfilesync/observer/doc/: class.puml
libfilesync/protocol/: CMakeLists.txt  Client.cpp  Client.hpp  Client.test.cpp  Client.test.hpp  FtpClient.cpp  FtpClient.hpp  HandleOrFilePath.hpp  MemoryHandle.hpp  MemoryHandle.tpp  ProtocolClient.cpp  ProtocolClient.hpp
libfilesync/protocol/doc/: class.puml  protocol_class.puml
libfilesync/protocol/memory/: CMakeLists.txt  CharArray.cpp  CharArray.hpp  CharArrayHandle.hpp  CurlHandle.hpp  Handle.hpp  Handle.tpp  HandleTemplate.hpp  HandleTemplate.tpp
libfilesync/utility/: CMakeLists.txt  Debug.cpp  Debug.hpp  Literals.hpp  Logger.cpp  Logger.hpp  TimeFormat.cpp  TimeFormat.hpp
tests/core/buffered_sync/: BufferedSync.cpp  BufferedSync.hpp  CMakeLists.txt  buffered_sync.cpp
tests/core/localFirstFileSyncer/: CMakeLists.txt  ResolveConflict.cpp  ResolveConflict.hpp  resolve_conflict.cpp
tests/core/one_way_sync/: CMakeLists.txt  OneWaySync.cpp  OneWaySync.hpp  one_way_sync.cpp
tests/core/remoteFirstFileSyncer/: CMakeLists.txt  ResolveConflict.cpp  ResolveConflict.hpp  resolve_conflict.cpp
tests/core/unbuffered_sync/: CMakeLists.txt  UnbufferedSync.cpp  UnbufferedSync.hpp  unbuffered_sync.cpp
tests/curl/ftp/: CMakeLists.txt  GetFileSize.cpp  GetFileSize.hpp  UploadDownload.cpp  UploadDownload.hpp  get_file_size.cpp  upload_download.cpp
tests/data/: CMakeLists.txt  CreateRecursiveEntries.cpp  CreateRecursiveEntries.hpp  FileChanged.cpp  FileChanged.hpp  create_recursive_entries.cpp  file_changed.cpp
tests/data/file/: CMakeLists.txt  Changed.cpp  Changed.hpp  changed_main.cpp
tests/protocol/ftp/: CMakeLists.txt  DeleteRemoteFile.cpp  DeleteRemoteFile.hpp  ServerAccess.cpp  ServerAccess.hpp  UploadDownloadDir.cpp  UploadDownloadDir.hpp  UploadDownloadFile.cpp  UploadDownloadFile.hpp  delete_remote_file.cpp  upload_download_abs_paths.cpp  upload_download_dir.cpp  upload_download_rel_paths.cpp
tests/system/: CMakeLists.txt  FileSync.cpp  FileSync.hpp  file_sync.cpp
tests/system/error_handling/: CMakeLists.txt  FileSyncErrorHandling.cpp  FileSyncErrorHandling.hpp  file_sync_error_handling.cpp
(+99 files in other folders)
